<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addStory.AddStoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivImagePreview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/image_preview"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_image"
            tools:src="@tools:sample/backgrounds/scenic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_background"
                android:text="@string/camera" />

            <Button
                android:id="@+id/bGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/gallery" />

        </LinearLayout>

        <EditText
            android:id="@+id/editDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:minWidth="300dp"
            android:minLines="3"
            android:padding="16dp"
            android:textColorHint="#A5A5A5"
            tools:text="@string/description" />

        <Button
            android:id="@+id/bUpload"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="18dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:minWidth="300dp"
            android:text="@string/upload" />

    </LinearLayout>
</ScrollView>


