<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".ui.register.RegisterFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        android:paddingVertical="36dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/story_app"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_again_in_story_app"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:background="@drawable/rounded_corners"
        android:elevation="36dp"
        android:padding="16dp"
        app:layoutDescription="@xml/fragment_register_xml_linearlayout2_scene"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/register_title"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.altop.mystoryapp.components.StoryEditText
            android:id="@+id/name"
            style="@style/storyEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:drawableStart="@drawable/ic_person_pin"
            android:hint="@string/name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <com.altop.mystoryapp.components.StoryEditText
            android:id="@+id/email"
            style="@style/storyEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <com.altop.mystoryapp.components.StoryEditText
            android:id="@+id/password"
            style="@style/storyEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_up"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background"
            android:enabled="false"
            android:text="@string/action_sign_up"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/textButton"
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="#E2D2FF"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="8dp"
            android:text="@string/login_message"
            android:textColor="@color/purple_500"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

</LinearLayout>